<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Principal">

    <item android:id="@+id/action_nuevo_cliente" android:title="@string/action_nuevo_cliente"
        android:icon="@drawable/ic_action_add_person"
        android:orderInCategory="100" app:showAsAction="ifRoom" />

    <item android:id="@+id/action_nuevoGasto"
        android:icon="@mipmap/ic_launcher"
        android:title="Nuevo Gasto"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/action_buscar"
        android:icon="@drawable/ic_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_nueva_factura"
        android:title="@string/action_nueva_factura"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="always"/>

</menu>
