<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.aplicacion.janhout.login.RecordarPass">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/dialogo_progreso"
            layout="@layout/progreso"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_login"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tvSubtitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="@string/recuperar_pass"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_login"
                android:layout_marginLeft="@dimen/margin_lateral_login"
                android:layout_marginRight="@dimen/margin_lateral_login"
                android:background="@drawable/estilos_edittext_personalizado"
                android:hint="@string/email"
                android:padding="@dimen/campos_texto"
                android:singleLine="true" />

            <Button
                android:id="@+id/btRecuperar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_bottom_login"
                android:layout_marginLeft="@dimen/margin_lateral_login"
                android:layout_marginRight="@dimen/margin_lateral_login"
                android:background="@drawable/boton_login"
                android:onClick="recuperar"
                android:text="@string/recuperar"
                android:textColor="@color/blanco" />

            <Button
                android:id="@+id/btVolverLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bt_recordar"
                android:onClick="volverLogin"
                android:text="@string/volver_login"
                android:textColor="@color/azul_logo"
                android:textSize="16sp" />

        </LinearLayout>
    </FrameLayout>
</RelativeLayout>